# rustwemoji

./: .gitignore  .gitmodules  Cargo.toml  README.md  prepare.rs  setup.sh
example/: Cargo.toml
example/src/: main.rs
src/: dist.rs  lib.rs
